# nagonova-hackathon

./: .env.example  .gitignore  CLAUDE.md  README.md  TEST_README.md
.claude/: settings.local.json
apps/api/: .coverage  README.md  config.py  database.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_kkj_analysis.py
apps/api/batch/: README.md  __init__.py  calculate_matching.py  fetch_rfps.py  generate_company_skill_embeddings.py  generate_embeddings.py
apps/api/data/: skill_aliases.json
apps/api/middleware/: __init__.py  auth.py  error_handler.py
apps/api/routers/: __init__.py  bookmarks.py  companies.py  documents.py  matching.py  rfps.py
apps/api/schemas/: __init__.py  bookmark.py  company.py  document.py  matching.py  rfp.py
apps/api/services/: README.md  __init__.py  embedding.py  kkj_api.py  matching_engine.py  proposal_generator.py  storage.py  vector_search.py
apps/api/templates/: proposal_template.md
apps/api/tests/: README_RLS_TESTS.md  RLS_TESTS_README.md  conftest.py  test_bookmarks.py  test_datetime_parser.py  test_proposal_generator.py  test_rfps.py  test_rls_policies.py  test_rls_rfps_extended.py  test_xml_parser.py
apps/api/tests/fixtures/: __init__.py  rls_fixtures.py
apps/api/utils/: __init__.py  datetime_parser.py  xml_parser.py
apps/web/: jest.config.ts  jest.setup.ts  package.json  playwright.config.ts  pnpm-lock.yaml
docs/: plan.md
supabase/: config.toml
supabase/migrations/: 20251107_initial_schema.sql  20251108_kkj_api_extended_fields.sql  20251108_semantic_search_functions.sql  (+1 more)
(+53 files in other folders)
