[project]
name = "rfp-radar-api"
version = "0.1.0"
description = "RFP Radar API - FastAPI backend for matching companies with government RFP opportunities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "supabase>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]
